<resources>
    <string name="app_name">LightPlex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lightplexLogo">LightPlex Logo</string>
    <string name="lightplexversion">LightPlex v0.0.1</string>
    <string name="fab">fab</string>
    <string name="Toggle">Toggle</string>
    <string name="morseAlf">Morse to Alphabetic</string>
    <string name="hintA">Alphabetic</string>
    <string name="alfMorse">Alphabetic to Morse</string>
    <string name="trad">Morse Translator</string>
    <string name="otraP">ANOTHER WORD</string>
    <string name="lin">LINE</string>
    <string name="pun">DOT</string>
    <string name="nuevaL">NEW LETTER</string>
    <string name="nuevaF">NEW PHRASE</string>
    <string name="tradu">TRANSLATE</string>
    <string name="cuentaN">create profile</string>
    <string name="contra">password</string>
    <string name="or">or</string>
    <string name="titCreCu">create profile</string>
    <string name="confirmC">confirm password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_flash_light_dimmer">FlashLightDimmer</string>

</resources>